sofa-platform/src/main/cpp/src/sofa.h

/* VectorMatrix/AngleOps */
SOFAExport void iauA2af(int ndp, double angle, char *sign, int idmsf[4]);
SOFAExport void iauA2tf(int ndp, double angle, char *sign, int ihmsf[4]);
SOFAExport int iauAf2a(char s, int ideg, int iamin, double asec, double *rad);
SOFAExport double iauAnp(double a);
SOFAExport double iauAnpm(double a);
SOFAExport void iauD2tf(int ndp, double days, char *sign, int ihmsf[4]);
SOFAExport int iauTf2a(char s, int ihour, int imin, double sec, double *rad);
SOFAExport int iauTf2d(char s, int ihour, int imin, double sec, double *days);
/* VectorMatrix/BuildRotations */
SOFAExport void iauRx(double phi, double r[3][3]);
SOFAExport void iauRy(double theta, double r[3][3]);
SOFAExport void iauRz(double psi, double r[3][3]);
/* VectorMatrix/CopyExtendExtract */
SOFAExport void iauCp(double p[3], double c[3]);
SOFAExport void iauCpv(double pv[2][3], double c[2][3]);
SOFAExport void iauCr(double r[3][3], double c[3][3]);
SOFAExport void iauP2pv(double p[3], double pv[2][3]);
SOFAExport void iauPv2p(double pv[2][3], double p[3]);
/* VectorMatrix/Initialization */
SOFAExport void iauIr(double r[3][3]);
SOFAExport void iauZp(double p[3]);
SOFAExport void iauZpv(double pv[2][3]);
SOFAExport void iauZr(double r[3][3]);
/* VectorMatrix/MatrixOps */
SOFAExport void iauRxr(double a[3][3], double b[3][3], double atb[3][3]);
SOFAExport void iauTr(double r[3][3], double rt[3][3]);
/* VectorMatrix/MatrixVectorProducts */
SOFAExport void iauRxp(double r[3][3], double p[3], double rp[3]);
SOFAExport void iauRxpv(double r[3][3], double pv[2][3], double rpv[2][3]);
SOFAExport void iauTrxp(double r[3][3], double p[3], double trp[3]);
SOFAExport void iauTrxpv(double r[3][3], double pv[2][3], double trpv[2][3]);
/* VectorMatrix/RotationVectors */
SOFAExport void iauRm2v(double r[3][3], double w[3]);
SOFAExport void iauRv2m(double w[3], double r[3][3]);
/* VectorMatrix/SeparationAndAngle */
SOFAExport double iauPap(double a[3], double b[3]);
SOFAExport double iauPas(double al, double ap, double bl, double bp);
SOFAExport double iauSepp(double a[3], double b[3]);
SOFAExport double iauSeps(double al, double ap, double bl, double bp);
/* VectorMatrix/SphericalCartesian */
SOFAExport void iauC2s(double p[3], double *theta, double *phi);