sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

	/**
	 * VectorMatrix/AngleOps<br>
	 * Original signature : <code>void iauA2af(int, double, char*, int[4])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:293</i>
	 */
	public static void iauA2af(int ndp, double angle, Pointer<Byte > sign, Pointer<Integer > idmsf) {
		iauA2af(ndp, angle, Pointer.getPeer(sign), Pointer.getPeer(idmsf));
	}
	protected native static void iauA2af(int ndp, double angle, @Ptr long sign, @Ptr long idmsf);
	/**
	 * Original signature : <code>void iauA2tf(int, double, char*, int[4])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:295</i>
	 */
	public static void iauA2tf(int ndp, double angle, Pointer<Byte > sign, Pointer<Integer > ihmsf) {
		iauA2tf(ndp, angle, Pointer.getPeer(sign), Pointer.getPeer(ihmsf));
	}
	protected native static void iauA2tf(int ndp, double angle, @Ptr long sign, @Ptr long ihmsf);
	/**
	 * Original signature : <code>int iauAf2a(char, int, int, double, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:297</i>
	 */
	public static int iauAf2a(byte s, int ideg, int iamin, double asec, Pointer<Double > rad) {
		return iauAf2a(s, ideg, iamin, asec, Pointer.getPeer(rad));
	}
	protected native static int iauAf2a(byte s, int ideg, int iamin, double asec, @Ptr long rad);
	/**
	 * Original signature : <code>double iauAnp(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:299</i>
	 */
	native public static double iauAnp(double a);
	/**
	 * Original signature : <code>double iauAnpm(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:301</i>
	 */
	native public static double iauAnpm(double a);
	/**
	 * Original signature : <code>void iauD2tf(int, double, char*, int[4])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:303</i>
	 */
	public static void iauD2tf(int ndp, double days, Pointer<Byte > sign, Pointer<Integer > ihmsf) {
		iauD2tf(ndp, days, Pointer.getPeer(sign), Pointer.getPeer(ihmsf));
	}
	protected native static void iauD2tf(int ndp, double days, @Ptr long sign, @Ptr long ihmsf);
	/**
	 * Original signature : <code>int iauTf2a(char, int, int, double, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:305</i>
	 */
	public static int iauTf2a(byte s, int ihour, int imin, double sec, Pointer<Double > rad) {
		return iauTf2a(s, ihour, imin, sec, Pointer.getPeer(rad));
	}
	protected native static int iauTf2a(byte s, int ihour, int imin, double sec, @Ptr long rad);
	/**
	 * Original signature : <code>int iauTf2d(char, int, int, double, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:307</i>
	 */
	public static int iauTf2d(byte s, int ihour, int imin, double sec, Pointer<Double > days) {
		return iauTf2d(s, ihour, imin, sec, Pointer.getPeer(days));
	}
	protected native static int iauTf2d(byte s, int ihour, int imin, double sec, @Ptr long days);
	/**
	 * VectorMatrix/BuildRotations<br>
	 * Original signature : <code>void iauRx(double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:312</i>
	 */
	public static void iauRx(double phi, Pointer<Double > r) {
		iauRx(phi, Pointer.getPeer(r));
	}
	protected native static void iauRx(double phi, @Ptr long r);
	/**
	 * Original signature : <code>void iauRy(double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:314</i>
	 */
	public static void iauRy(double theta, Pointer<Double > r) {
		iauRy(theta, Pointer.getPeer(r));
	}
	protected native static void iauRy(double theta, @Ptr long r);
	/**
	 * Original signature : <code>void iauRz(double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:316</i>
	 */
	public static void iauRz(double psi, Pointer<Double > r) {
		iauRz(psi, Pointer.getPeer(r));
	}
	protected native static void iauRz(double psi, @Ptr long r);
	/**
	 * VectorMatrix/CopyExtendExtract<br>
	 * Original signature : <code>void iauCp(double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:321</i>
	 */
	public static void iauCp(Pointer<Double > p, Pointer<Double > c) {
		iauCp(Pointer.getPeer(p), Pointer.getPeer(c));
	}
	protected native static void iauCp(@Ptr long p, @Ptr long c);
	/**
	 * Original signature : <code>void iauCpv(double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:323</i>
	 */
	public static void iauCpv(Pointer<Double > pv, Pointer<Double > c) {
		iauCpv(Pointer.getPeer(pv), Pointer.getPeer(c));
	}
	protected native static void iauCpv(@Ptr long pv, @Ptr long c);
	/**
	 * Original signature : <code>void iauCr(double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:325</i>
	 */
	public static void iauCr(Pointer<Double > r, Pointer<Double > c) {
		iauCr(Pointer.getPeer(r), Pointer.getPeer(c));
	}
	protected native static void iauCr(@Ptr long r, @Ptr long c);
	/**
	 * Original signature : <code>void iauP2pv(double[3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:327</i>
	 */
	public static void iauP2pv(Pointer<Double > p, Pointer<Double > pv) {
		iauP2pv(Pointer.getPeer(p), Pointer.getPeer(pv));
	}
	protected native static void iauP2pv(@Ptr long p, @Ptr long pv);
	/**
	 * Original signature : <code>void iauPv2p(double[2][3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:329</i>
	 */
	public static void iauPv2p(Pointer<Double > pv, Pointer<Double > p) {
		iauPv2p(Pointer.getPeer(pv), Pointer.getPeer(p));
	}
	protected native static void iauPv2p(@Ptr long pv, @Ptr long p);
	/**
	 * VectorMatrix/Initialization<br>
	 * Original signature : <code>void iauIr(double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:334</i>
	 */
	public static void iauIr(Pointer<Double > r) {
		iauIr(Pointer.getPeer(r));
	}
	protected native static void iauIr(@Ptr long r);
	/**
	 * Original signature : <code>void iauZp(double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:336</i>
	 */
	public static void iauZp(Pointer<Double > p) {
		iauZp(Pointer.getPeer(p));
	}
	protected native static void iauZp(@Ptr long p);
	/**
	 * Original signature : <code>void iauZpv(double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:338</i>
	 */
	public static void iauZpv(Pointer<Double > pv) {
		iauZpv(Pointer.getPeer(pv));
	}
	protected native static void iauZpv(@Ptr long pv);
	/**
	 * Original signature : <code>void iauZr(double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:340</i>
	 */
	public static void iauZr(Pointer<Double > r) {
		iauZr(Pointer.getPeer(r));
	}
	protected native static void iauZr(@Ptr long r);
	/**
	 * VectorMatrix/MatrixOps<br>
	 * Original signature : <code>void iauRxr(double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:345</i>
	 */
	public static void iauRxr(Pointer<Double > a, Pointer<Double > b, Pointer<Double > atb) {
		iauRxr(Pointer.getPeer(a), Pointer.getPeer(b), Pointer.getPeer(atb));
	}
	protected native static void iauRxr(@Ptr long a, @Ptr long b, @Ptr long atb);
	/**
	 * Original signature : <code>void iauTr(double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:347</i>
	 */
	public static void iauTr(Pointer<Double > r, Pointer<Double > rt) {
		iauTr(Pointer.getPeer(r), Pointer.getPeer(rt));
	}
	protected native static void iauTr(@Ptr long r, @Ptr long rt);
	/**
	 * VectorMatrix/MatrixVectorProducts<br>
	 * Original signature : <code>void iauRxp(double[3][3], double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:352</i>
	 */
	public static void iauRxp(Pointer<Double > r, Pointer<Double > p, Pointer<Double > rp) {
		iauRxp(Pointer.getPeer(r), Pointer.getPeer(p), Pointer.getPeer(rp));
	}
	protected native static void iauRxp(@Ptr long r, @Ptr long p, @Ptr long rp);
	/**
	 * Original signature : <code>void iauRxpv(double[3][3], double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:354</i>
	 */
	public static void iauRxpv(Pointer<Double > r, Pointer<Double > pv, Pointer<Double > rpv) {
		iauRxpv(Pointer.getPeer(r), Pointer.getPeer(pv), Pointer.getPeer(rpv));
	}
	protected native static void iauRxpv(@Ptr long r, @Ptr long pv, @Ptr long rpv);
	/**
	 * Original signature : <code>void iauTrxp(double[3][3], double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:356</i>
	 */
	public static void iauTrxp(Pointer<Double > r, Pointer<Double > p, Pointer<Double > trp) {
		iauTrxp(Pointer.getPeer(r), Pointer.getPeer(p), Pointer.getPeer(trp));
	}
	protected native static void iauTrxp(@Ptr long r, @Ptr long p, @Ptr long trp);
	/**
	 * Original signature : <code>void iauTrxpv(double[3][3], double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:358</i>
	 */
	public static void iauTrxpv(Pointer<Double > r, Pointer<Double > pv, Pointer<Double > trpv) {
		iauTrxpv(Pointer.getPeer(r), Pointer.getPeer(pv), Pointer.getPeer(trpv));
	}
	protected native static void iauTrxpv(@Ptr long r, @Ptr long pv, @Ptr long trpv);
	/**
	 * VectorMatrix/RotationVectors<br>
	 * Original signature : <code>void iauRm2v(double[3][3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:363</i>
	 */
	public static void iauRm2v(Pointer<Double > r, Pointer<Double > w) {
		iauRm2v(Pointer.getPeer(r), Pointer.getPeer(w));
	}
	protected native static void iauRm2v(@Ptr long r, @Ptr long w);
	/**
	 * Original signature : <code>void iauRv2m(double[3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:365</i>
	 */
	public static void iauRv2m(Pointer<Double > w, Pointer<Double > r) {
		iauRv2m(Pointer.getPeer(w), Pointer.getPeer(r));
	}
	protected native static void iauRv2m(@Ptr long w, @Ptr long r);
	/**
	 * VectorMatrix/SeparationAndAngle<br>
	 * Original signature : <code>double iauPap(double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:370</i>
	 */
	public static double iauPap(Pointer<Double > a, Pointer<Double > b) {
		return iauPap(Pointer.getPeer(a), Pointer.getPeer(b));
	}
	protected native static double iauPap(@Ptr long a, @Ptr long b);
	/**
	 * Original signature : <code>double iauPas(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:372</i>
	 */
	native public static double iauPas(double al, double ap, double bl, double bp);
	/**
	 * Original signature : <code>double iauSepp(double[3], double[3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:374</i>
	 */
	public static double iauSepp(Pointer<Double > a, Pointer<Double > b) {
		return iauSepp(Pointer.getPeer(a), Pointer.getPeer(b));
	}
	protected native static double iauSepp(@Ptr long a, @Ptr long b);
	/**
	 * Original signature : <code>double iauSeps(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:376</i>
	 */
	native public static double iauSeps(double al, double ap, double bl, double bp);
	/**
	 * VectorMatrix/SphericalCartesian<br>
	 * Original signature : <code>void iauC2s(double[3], double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:381</i>
	 */
	public static void iauC2s(Pointer<Double > p, Pointer<Double > theta, Pointer<Double > phi) {
		iauC2s(Pointer.getPeer(p), Pointer.getPeer(theta), Pointer.getPeer(phi));
	}
	protected native static void iauC2s(@Ptr long p, @Ptr long theta, @Ptr long phi);
